--- a/format.css
+++ b/format.css
@@ -1,3 +1,8 @@
-.green123 {
-  color: green;
+.green {
+  color: #465929;
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 27px;
+  text-align: center;
 }
