--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,35 @@ h2 {
  */
 /*:focus використовуємо для полів вводу*/
 
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 300;
+  src: url('../fonts/poppins-v21-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/poppins-v21-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
+  src: url('../fonts/poppins-v21-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 900;
+  src: url('../fonts/poppins-v21-latin-900.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
 :root {
   --color-brand-light: #819b57;
   --color-brand-darker: #465929;
@@ -22,6 +51,9 @@ h2 {
 /* BASE */
 body {
   color: var(--color-primary-dark);
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
 }
 ul {
   /*прибирає кружечки*/
@@ -29,9 +61,11 @@ ul {
 }
 a {
   color: inherit;
-  text-decoration: none;
 }
 /* BUTTON */
+button {
+  font-size: 18px;
+}
 .button {
   color: var(--color-primary-light);
   background: var(--color-brand-light);
@@ -41,18 +75,36 @@ a {
 }
 .button:hover {
   background-color: transparent;
+  font-weight: 600;
   color: var(--color-brand-darker);
 }
 /* LINK */
 .link {
   color: var(--color-primary-light);
+  text-decoration: none;
 }
 .link:hover {
   color: var(--color-brand-light);
+  font-weight: 600;
+}
+/*Global section title*/
+.section-title {
+  color: var(--color-primary-dark);
+  font-weight: 900;
+  font-size: 64px;
+  line-height: 1.3125;
+  text-align: center;
+}
+#traditions-section .section-title,
+#contacts-section .section-title {
+  text-align: left;
 }
 /* HERO SECTION */
 .hero-title {
   color: var(--color-primary-light);
+  font-weight: 900;
+  font-size: 128px;
+  text-align: center;
 }
 .accent {
   color: var(--color-brand-light);
@@ -61,8 +113,45 @@ a {
 .advantages-list {
   background-color: var(--color-brand-light);
   color: var(--color-primary-light);
+  font-weight: 300;
+  font-size: 20px;
 }
 
-.section-title {
-  color: var(--color-primary-dark);
+/* Traditions Section */
+#traditions-section span {
+  font-weight: 600;
+}
+.traditions-text-uppercase span {
+  text-transform: uppercase;
+}
+
+/* Chiefs Section */
+#chiefs-section h3 {
+  font-weight: 600;
+  font-size: 40px;
+}
+/* Format Section */
+#formats-section article {
+  color: var(--color-primary-light);
+  font-weight: 600;
+}
+.formats-text {
+  font-weight: 400;
+  font-size: 14px;
+}
+/* Contacts  Section */
+#contacts-section p {
+  color: var(--color-brand-darker);
+}
+/* Footer */
+footer address {
+  font-weight: 300;
+  font-size: 16px;
+}
+footer .link {
+  font-weight: 300;
+  font-size: 16px;
+}
+footer p {
+  font-size: 14px;
 }
